lead the searchbar, the articlesList, missing pagination

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -4,15 +4,13 @@
 }
 
 img {
-    max-width: 50vh;
     background-color: bisque;
-    margin: 0 2vw 0 2vw;
 
     /* border-radius: 50%; */
-    border: 2px black solid;
+    /* border: 2px black solid; */
 }
 
 
 .author-description {
-    border: 2px black solid;
+    /* border: 2px black solid; */
 }
